--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^3.8.1",
+    "@emotion/react": "^11.14.0",
     "@faker-js/faker": "^9.0.3",
     "@reduxjs/toolkit": "^2.3.0",
+    "@storybook/addon-docs": "^8.6.3",
+    "@storybook/addon-themes": "^8.6.3",
     "@tanstack/react-query": "^5.66.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
